tests/ast_bad_mutref_slice_type.stderr
tests/ast_bad_mutref_slice_type.sl:2:14: error: SL1007: expected type
