tests/ast_bad_mutref_slice_type.sl
// Verifies the AST for bad mutable reference slice type.
fn main(a mut&[i32]) i32 {
    return 0
}
